# CMGDB_temp3

./: CMakeLists.txt  README.md  setup.py
.github/workflows/: publish_pypi.yml
src/CMGDB/_cmgdb/: CMGDB.cpp
src/CMGDB/_cmgdb/include/database/: Model.h
